Fix issue with LT toggle not being visible for mobile anymore

--- a/tools/preferences/tool.css
+++ b/tools/preferences/tool.css
@@ -14,7 +14,8 @@ a.lichessTools-preferences span.lichessTools-toggleExtension {
 }
 
 
-a.lichessTools-preferences:not(:has(input:checked)) span.lichessTools-toggleExtension {
+a.lichessTools-preferences:not(:has(input:checked)) span.lichessTools-toggleExtension,
+body.mobile .dasher.shown a.lichessTools-preferences span.lichessTools-toggleExtension {
   opacity: 1;
 }
 
